--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <nav class="header__nav">
       <div class="header__logo">
-        <h4>Sushiman</h4>
+        <h4>Oishina</h4>
         <div class="header__logo-overlay"></div>
       </div>
 
