--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <nav class="header__nav">
       <div class="header__logo">
-        <h4>Oishina</h4>
+        <h4>Oishina Sushi</h4>
         <div class="header__logo-overlay"></div>
       </div>
 
@@ -79,7 +79,65 @@
     </div>
   </section>
 
-  
+  <section class="about-us">
+
+    <div class="about-us__image">
+      <div class="about-us__image-sushi3">
+        <img src="assets/sushi-3.png" alt="sushi">
+      </div>
+
+      <button class="about-us__button">
+        Learn More
+        <img src="assets/arrow-up-right.svg" alt="learn more">
+      </button>
+
+      <div class="about-us__image-sushi2">
+        <img src="assets/sushi-2.png" alt="sushi">
+      </div>
+    </div>
+
+    <div class="about-us__content">
+      <p class="sushi__subtitle">About Us / 私たちに関しては</p>
+      <h3 class="sushi__title">Our mission is to bring true Japanese flavours to you</h3>
+      <p class="sushi__description">We will continue to provide the experience of Omotenashi, the Japanese mindset of hospitality, with our shopping and dining for our customers.</p>
+    </div>
+
+  </section>
+
+  <section class="popular-foods" id="menu">
+    <h2 class="popular-foods__title">Popular Food / 人気</h2>
+
+    <div class="popular-foods__filters sushi__hide-scrollbar">
+      <button class="popular-foods__filters-btn active">All</button>
+      <button class="popular-foods__filters-btn">
+        <img src="/assets/sushi-9.png" alt="sushi 9">
+        Sushi
+      </button>
+      <button class="popular-foods__filters-btn">
+        <img src="/assets/sushi-8.png" alt="sushi 8">
+        Ramen
+      </button>
+      <button class="popular-foods__filters-btn">
+        <img src="/assets/sushi-7.png" alt="sushi 7">
+        Udon
+      </button>
+      <button class="popular-foods__filters-btn">
+        <img src="/assets/sushi-6.png" alt="sushi 6">
+        Dango
+      </button>
+      <button class="popular-foods__filters-btn">Others</button>
+    </div>
+
+    <div class="popular-foods__catalogue">
+    
+    </div>
+
+    <button class="popular-foods__button">
+      Explore Foods
+      <img src="assets/arrow-right.svg" alt="arrow-right">
+    </button>
+
+  </section>
   <script src="js/script.js" type="module"></script>
 </body>
 </html>
